# podcast-generator

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test_strategy2.py
.kiro/steering/: workflow.md
data/: gdelt_raw_data.csv  gdelt_report_20251211_1749.csv  gdelt_report_20251211_1912.csv
src/podcast_generator/: app.py  article_fetcher.py  data_fetcher.py  gcam_parse.py  gdelt_fetcher.py  gdelt_parse.py  gdelt_parser.py  gdelt_themes.py  generate_news.py  llm_generator.py  llm_providers.py  location_translator.py  main.py  news_merger.py  news_translator.py  parse_report.py  person_positions.py  pipeline.py
src/podcast_generator/api/: logging_config.py  main.py  response.py  scheduler.py
src/podcast_generator/api/routes/: __init__.py  articles.py  articles_helpers.py
src/podcast_generator/database/: __init__.py  article_repo.py  supabase_client.py
src/podcast_generator/gdelt/: __init__.py  bigquery_stats.py  cameo_codes.py  config.py  data_fetcher.py  data_loader.py  gcam_parse.py  gdelt_event.py  gdelt_gkg.py  gdelt_mentions.py  gdelt_parse.py  gdelt_service.py  query_service.py
src/podcast_generator/gdelt/gdelt_data/: AU_gkg.csv  BR_gkg.csv  CA_gkg.csv  CH_event.csv  CH_gkg.csv  FR_gkg.csv  IN_gkg.csv  JA_event.csv  JA_gkg.csv  RS_event.csv  RS_gkg.csv  TH_event.csv  TH_gkg.csv  UK_gkg.csv  US_gkg.csv  bigquery_stats.json
src/podcast_generator/gdelt/gkg_csv/: CH.csv
src/podcast_generator/gdelt/model/: __init__.py  event_model.py  gkg_model.py  mentions_model.py
src/podcast_generator/llm/: llm_generator.py
src/podcast_generator/utils/: __init__.py
tests/: test_articles_helpers.py  test_data_pipeline.py  test_gdelt_integration.py  test_gdelt_query_service.py  test_scheduler.py
