[project]
name = "podcast-generator"
version = "0.1.0"
description = ""
authors = [
    {name = "qh",email = "854883819@qq.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-cloud-bigquery>=3.0.0",
    "pandas>=2.0.0",
    "requests>=2.28.0",
    "db-dtypes>=1.0.0",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "newspaper4k (>=0.9.4.1,<0.10.0.0)",
    "trafilatura (>=2.0.0,<3.0.0)",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-dotenv>=1.0.0",
    "supabase>=2.0.0",
]

[tool.poetry]
packages = [{include = "podcast_generator", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["podcast_generator"] # 替换为您的包名
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.mypy]
files = ["src/podcast_generator"]
ignore_missing_imports = true
[dependency-groups]
dev = [
    "pre-commit (>=4.5.0,<5.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]
